@@ -17,6 +17,8 @@ Enhancements:
     file copying (bug 662442).
 * Merged in lp:~mterry/duplicity/argv
   - Fix use of argv when calling os.execve
+* Merged in lp:~verb/duplicity/bucket_root_fix
+  - Fix bug that prevents backing up to the root of a bucket with boto backend.
 
 
 New in v0.6.22 (2013/08/22)
